--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "file-loader": "^6",
     "node-sass": "^4",
     "sass": "^1",
-    "vue": "^2"
+    "vue": "^2",
+    "vue-router": "^3.4.3"
   }
 }
